--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 <h1>welcome to github</h1>
 <p>This is my first page hosted on github.</p>
+  <a href="airlineDatabase.json">Airline Databse</a>
 </body>
 </html>
 
